--- a/doc/src/layouts/BaseLayout.astro
+++ b/doc/src/layouts/BaseLayout.astro
@@ -138,7 +138,7 @@ const { title, description = "A simple, dependency-free debounce utility for Rea
 						<h4>Links</h4>
 						<ul>
 							<li><a href="/docs">Documentation</a></li>
-							<li><a href="/examples">Examples</a></li>
+							<li><a href="/demo">Code Examples</a></li>
 							<li><a href="/api">API Reference</a></li>
 							<li><a href="https://github.com/juji/use-simple-debounce" target="_blank" rel="noopener">GitHub</a></li>
 						</ul>
