--- a/doc/src/pages/index.astro
+++ b/doc/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
+import Hero from '../components/Hero.astro';
 ---
 
 <BaseLayout title="use-simple-debounce - Simple, dependency-free debouncing for modern web development">
-	<!-- Homepage content will go here -->
+	<Hero />
 </BaseLayout>
