--- a/doc/src/components/ShikiHighlighter.astro
+++ b/doc/src/components/ShikiHighlighter.astro
@@ -83,6 +83,7 @@ const darkHtml = highlighter.codeToHtml(code, {
   .shiki-highlighter {
     width: 100%;
     position: relative;
+    text-align: left;;
   }
 
   .shiki-code {
