--- a/doc/src/components/ShikiHighlighter.astro
+++ b/doc/src/components/ShikiHighlighter.astro
@@ -42,7 +42,9 @@ const highlighter = await createHighlighter({
     'xml',
     'markdown',
     'dockerfile',
-    'makefile'
+    'makefile',
+    'vue',
+    'svelte'
   ]
 });
 
